2009-07-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: ProcessResponseHeaderCallback:
	set current deployment.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h:
	* mms-downloader.cpp|h: If downloading the mms url
	doesn't succeed, raise an error. Fixes MS DRT #222
	completely.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp:
	* mediaelement.cpp: When playing an mms stream, SL sets
	DownloadProgress to 1.0 after downloading the header.
	Makes MS DRT #222 reach a bit further.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Fix printf.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Handle DownloadProgressChanged events
	properly.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.cpp|h: Add another downloader API
	method, this time to get the DownloaderResponse.

	* cbinding.cpp|h: Regenerated.

2009-07-02  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h: instruct the generator to do more for us.

2009-07-02  Chris Toshok  <toshok@ximian.com>

	* propertypath.h: fix operator== and add operator!=.

	* validators.h|cpp: add StoryboardTargetPropertyValidator.

	* dependencyproperty.g.cpp: regen.

	* animation.h (class Storyboard): use a special validator for
	TargetPropertyProperty such that it follows the semantics laid out
	in StoryboardTest.SetTargetPropertyTwice*.

2009-07-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

       * mediaelement.cpp: Protect against emitting BufferingProgressChanged
       when the actual value hasn't changed.

       * pipeline.cpp: FillBuffers: don't report any buffering progress
       if we don't have any media streams.

2009-07-02  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (LoadPortableUserInterface): Now takes a 'lang'
	argument which is used for loading the preferred default font (by
	language) first, before the other fallback fonts.