@@ -1,3 +1,10 @@
+2009-07-03  Alan McGovern  <amcgovern@novell.com>
+
+	* runtime.cpp: When inside the if statement, we know that
+	  toplevel and element are the same, so use 'element' instead
+	  of 'toplevel' in case the toplevel is removed during the
+	  loaded/resized event. Fixes memorabilia.
+
 2009-07-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* mms-downloader.cpp: ProcessResponseHeaderCallback:
